# ubgs

./: .gitignore  Cargo.toml  README.md
IngressWars world/: level.dat_old
IngressWars world/advancements/: e830d792-e012-42ed-bb9c-34ede477cb8b.json
IngressWars world/poi/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.-2.1.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca  r.0.2.mca  r.1.1.mca  r.1.3.mca  r.2.1.mca  r.2.3.mca  r.29.9.mca  r.3.1.mca
IngressWars world/region/: r.-2.-1.mca  r.-2.0.mca  r.-3.2.mca  r.-4.2.mca  r.-4.3.mca  r.-4.4.mca  r.-4.5.mca  r.-5.3.mca  r.-5.4.mca  r.-5.5.mca  r.0.3.mca  r.0.4.mca  r.1.-1.mca  r.1.4.mca  r.2.0.mca  r.2.1.mca  r.2.4.mca  r.28.10.mca  r.28.9.mca  r.29.10.mca  r.3.0.mca  r.3.2.mca  r.3.3.mca  r.3.4.mca  r.30.10.mca  r.30.9.mca  r.4.0.mca  r.4.1.mca  r.4.2.mca
IngressWars world/stats/: e830d792-e012-42ed-bb9c-34ede477cb8b.json
Server Testing/entities/: r.-1.0.mca  r.0.0.mca
Server Testing/playerdata/: e830d792-e012-42ed-bb9c-34ede477cb8b.dat_old
Server Testing/poi/: r.0.0.mca
Server Testing/stats/: e830d792-e012-42ed-bb9c-34ede477cb8b.json
first/advancements/: e830d792-e012-42ed-bb9c-34ede477cb8b.json
first/poi/: r.0.-1.mca
src/: block_update.rs  building.rs  combat.rs  death.rs  exit.rs  explosion.rs  lib.rs  main.rs  perf.rs  players.rs  save.rs  server_list.rs  terrain.rs
src/anvil/: mod.rs  parsing.rs
src/command/: find.rs  gamemode.rs  kick.rs  mod.rs  teleport.rs
src/physics/: fluids.rs  kinematics.rs  mod.rs  redstone.rs
src/worldgen/: mod.rs  noise_helpers.rs
world/: level.dat_old
world/poi/: r.-1.0.mca
(+13 files in other folders)
