[package]
name = "building-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
bevy_time = "0.14.2"
ctrlc = { version = "3.4.5", features = ["termination"] }
flate2 = "1.0.34"
flume = "0.11.0"
noise = "0.9.0"
thiserror = "1.0.64"
tracing = "0.1.40"
valence = { path = "valence" }
